# simple-whisper-ui

./: README.md  flake.nix  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: Settings.vue  TheFilePicker.vue  TheModelDownloader.vue  TheOutput.vue  TheThemeSwitcher.vue
src/lib/: settings.ts
src/stores/: pickedFile.ts  settings.ts
